# pixsaw

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  README.rst  buildout.cfg  pip-audit.sh  pixsaw.sh  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.py  update-dep.Dockerfile  update-dep.sh
examples/small-puzzle/: pieces.json
src/pixsaw/: __init__.py  _version.py  base.py  script.py  tools.py
